--- a/styles.css
+++ b/styles.css
@@ -1,49 +1,46 @@
 body{
     background-color:black;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    color: lightgray;
     margin:0;
-    padding:0;
+    /* display:flex; */
+}
+
+#mainContainer{
+}
+
+#dummy{
+    /* margin-top: 75%; */
+}
+
+#mainScreen{
+    /* background-color: white; */
+    /* position:fixed; */
+    /* overflow:hidden; */
+    /* width:100%; */
+    /* min-width: 500px; */
+    /* aspect-ratio:21/18; */
     height: 100vh;
-    display:flex;
-    flex-direction: column;
+    background-image: url('images/gb-background.png');
+    background-size:contain;
+    background-repeat:no-repeat;
+    background-position:center;
 }
+/* #gbBackground{
+    height: 100%;
+    width: auto;
+    position:absolute;
+    top:0;
+    left:50%;
+    transform: translateX(-50%);
 
-#header{
-    background-color:tan;
-    color:black;
-    display:flex;
-    height:100px;
-    width: 100%;
-    justify-content: center;
-    align-items: center;
-}
-#middle{
-    display:flex;
-    width: 100%;
-    flex-grow:1;
+} */
+#viewScreen{
+    padding:3px;
+    background-color:red;
+    opacity:51%;
+    height:46%;
+    width:51%;
+    position:relative;
+    top: 23.1%;
+    left:24%;
 
-    
-}
-#right{
-    background-color:tomato;
-    color:black;
-    display:flex;
-    flex-shrink:0;
-    width: 150px;
-    height:100%;
-}
-#main{
-    display:flex;
-    flex-direction:column;
-    flex-grow:1;
-}
-#footer{
-    background-color:tan;
-    color:black;
-    height:80px;
-    width:100%;
-    display:flex;
-    align-items:center;
-    justify-content: center;
 }
