--- a/style.css
+++ b/style.css
@@ -39,12 +39,7 @@ body {
 
 #viewscreen {
     background-color: white;
-    /* padding: 1%; */
     position: relative;
-    /* height: 67.6%;
-    width: 57%;
-    top: 14.9%;
-    left: 20.6%; */
     height: 69.9%;
     width: 59%;
     top: 15%;
@@ -78,6 +73,19 @@ body {
     100%{
         opacity:0;
     }
+}
+
+@keyframes shake{
+    0%{
+        transform: translate(0px, 0px);
+    }
+    100%{
+        transform: translate(0px, 5px);
+    }
+}
+
+.shake{
+    animation: shake .25s infinite alternate;
 }
 
 /* Scenes */
