--- a/style.css
+++ b/style.css
@@ -9,6 +9,12 @@
 
 html {
     height: 100%;
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Old versions of Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently */
 }
 
 body {
@@ -127,13 +133,22 @@ body {
     white-space: pre-line;
     border-style:solid double;
     border-radius:2%;
-    border-width:5px;
+    border-width: .6vh;
     padding:1%;
 }
+.noSelect {
+    -webkit-touch-callout: none; /* iOS Safari */
+      -webkit-user-select: none; /* Safari */
+       -khtml-user-select: none; /* Konqueror HTML */
+         -moz-user-select: none; /* Old versions of Firefox */
+          -ms-user-select: none; /* Internet Explorer/Edge */
+              user-select: none; /* Non-prefixed version, currently */
+}  
 
 
 /*characterSelect*/
 #sc_characterSelect{
+    background-color:rgb(155, 156, 105);
     width: 100%;
     height: 100%;
     display: flex;
@@ -143,17 +158,37 @@ body {
 
 .arrow{
     width:30%;
-    padding-top:10%;
+    padding-top:75%;
     animation: arrowAnimation 1s infinite alternate;
     font-family:pokemonTitle;
     font-size: 12vh;
-    cursor:pointer;
     text-align:center;
+}
+.arrowContainer{
+    background-color:white;
+    border-style: solid;
+    border-radius:2%;
+    border-width: .6vh;
+    cursor:pointer;
+    margin:0% 1%;
+}
+.arrowContainer.left{
+    padding-right:4%;
+
+}
+.arrowContainer.right{
+    padding-left:1.5%;
+    padding-right:2.5%;
 }
 
 .characterDisplay{
+    background-color:white;
     width:70%;
     height:70%;
+    border-style: solid;
+    border-radius:2%;
+    border-width: .6vh;
+    padding:2%;
 }
 
 #characterImage{
@@ -164,4 +199,25 @@ body {
     background-size:contain;
     background-position: center;
     background-repeat: no-repeat;
+}
+#imageSelect{
+    background-color: white;
+    border-style:solid;
+    text-align:center;
+    padding:4%;
+    border-radius:2%;
+    border-width: .6vh;
+}
+#characterSelectContainer{
+    background-color:rgb(98, 4, 221);
+    border-color:black;
+    border-style: solid;
+    border-width:1vh;
+    padding:2%;
+    width: 100%;
+    height:90%;
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    gap:5vh;
 }
