--- a/style.css
+++ b/style.css
@@ -74,6 +74,13 @@ body {
 .hidden{
     display:none!important;
 }
+.pokeBorder{
+    border-style:solid double;
+    border-radius:2%;
+    border-width: .6vh;
+    padding:1%;
+}
+
 
 /* title*/
 
@@ -131,20 +138,8 @@ body {
     width:95%;
     height:95%; 
     white-space: pre-line;
-    border-style:solid double;
-    border-radius:2%;
-    border-width: .6vh;
     padding:1%;
 }
-.noSelect {
-    -webkit-touch-callout: none; /* iOS Safari */
-      -webkit-user-select: none; /* Safari */
-       -khtml-user-select: none; /* Konqueror HTML */
-         -moz-user-select: none; /* Old versions of Firefox */
-          -ms-user-select: none; /* Internet Explorer/Edge */
-              user-select: none; /* Non-prefixed version, currently */
-}  
-
 
 /*characterSelect*/
 #sc_characterSelect{
@@ -221,3 +216,26 @@ body {
     align-items:center;
     gap:5vh;
 }
+/*battle*/
+#sc_battle{
+    width:100%;
+    height:100%;
+}
+#bottomMenu{
+    width:180%;
+    height:95%;
+}
+.menuButtonRow{
+    width:90%;
+    height:100%;
+}
+.menuButton{
+    width:40%;
+    height:80%;
+    display:flex;
+    align-items:center;
+    gap:5%;
+    border:solid;
+    border-width:1px;
+}
+
