Finished! Could add sound, but I wanna be done.

--- a/animations.css
+++ b/animations.css
@@ -140,3 +140,25 @@
 .playerRun{
     animation: playerRun 1.5s;
 }
+@keyframes characterDeath{
+    0%{
+        background-color: inherit;
+        opacity:1;
+    }
+    30%{
+        background-color:red;
+        opacity:1;
+    }
+    100%{
+        background-color:red;
+        opacity:0;
+    }
+}
+.characterDeath{
+    border-radius:100vh;
+    width:50%;
+    background-color:red;
+    opacity:0;
+    animation: characterDeath 6s;
+
+}
